2002-09-17  Matthias Clasen  <maclas@gmx.de>

	* gtk/stock-icons/stock_color_picker_25.png:
	* gtk/stock-icons/Makefile.am (VARIABLES1): 
	* gtk/gtkstock.h (GTK_STOCK_COLOR_PICKER): 
	* gtk/gtkiconfactory.c (get_default_icons):  
	* gtk/gtkcolorsel.c (gtk_color_selection_init): Stockify color
	picker icon.   (#89880)

2002-09-14  Sven Neumann  <sven@gimp.org>

	* gdk/gdkpixbuf-drawable.c: fixed my latest change.

2002-09-13  Sven Neumann  <sven@gimp.org>

	* gdk/gdkpixbuf-drawable.c: use the most significant bits of the
	GdkColor components (#89703).

2002-09-12  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkinput-win32.c (gdk_input_wintab_init): Use correct
	function name in warning messages.

	Merge from gtk-2-0:

	* gdk/win32/gdkdrawable-win32.c
	* gdk/win32/gdkevents-win32.c: Some spacing and indentation cleanup.
	
	* gdk/win32/gdkdrawable-win32.c (render_line_horizontal,
	render_line_vertical): Return TRUE.
	
	* gdk/win32/gdkevents-win32.c (_gdk_events_init): Search if the
	system has some input locale identifier that uses a Latin
	keyboard. This is needed to be able to get the virtual-key code
	for the latin characters corresponding to ASCII control
	characters. If no such keyboard is present, try to load one
	then. Will this upset users with no wish to ever use a Latin-based
	keyboard layout?

	(vk_from_char): Convert all ASCII control chars to the
	corresponding uppercase char before calling VkKeyScanEx(). Idea by
	Florent Duguet. Makes Control-C work again. To make it hopefully
	work like I think it should on non-Latin keyboards, too, use
	latin_locale when looking for the corresponding keycode.

	* gdk/win32/gdkgeometry-win32.c: Add GDK_NOTE debugging output
	to some functions, related to moving and resizing and expose
	and antiexpose queue processing. Use %p to output HWNDs.

	* gdk/win32/gdkkeys-win32.c (print_keysym_tab): Factor out
	debugging output to new function.

	Fix for #81831 by Tim Evans:
	